# sistema_notas

./: .coverage  .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
src/sistema_notas/: app.py
src/sistema_notas/database/: database.py
src/sistema_notas/docker/: init.sql
src/sistema_notas/exceptions/: nota_duplicada_error.py  nota_no_encontrada.py
src/sistema_notas/models/: estudiante.py  nota.py
src/sistema_notas/repositories/: gestion_notas_repository.py
src/sistema_notas/services/: gestion_notas_service.py
tests/: conftest.py  test_health.py
tests/bdd/features/: notas.feature
tests/bdd/steps/: test_notas_steps.py
tests/unit/: test_gestion_notas.py
