[project]
name = "sistema-notas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest>=9.0.3",
    "pytest-bdd>=8.1.0",
    "mysql-connector-python>=9.7.0",
    "flask>=3.1.3",
    "python-dotenv>=1.2.2",
]
[tool.pytest.ini_options]
pythonpath = ["src"]

markers = [
    "smoke: pruebas críticas básicas",
    "critical: funcionalidades críticas",
    "regression: pruebas de regresión"
]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]

[tool.uv]
package = true
